feat: pint-query tool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,4 +49,5 @@ uuid = { version = "1.11.0", features = ["v4"] }
 essential-rest-client = { path = "crates/essential-rest-client", version = "0.6.0" }
 essential-app-utils = { path = "apps/utils", version = "0.6.0" }
 pint-deploy = { path = "crates/pint-deploy", version = "0.1.0" }
+pint-query = { path = "crates/pint-query", version = "0.1.0" }
 pint-submit = { path = "crates/pint-submit", version = "0.1.0" }
