--- a/crates/pint-deploy/Cargo.toml
+++ b/crates/pint-deploy/Cargo.toml
@@ -11,7 +11,10 @@ repository.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 clap = { workspace = true }
+essential-hash = { workspace = true }
 essential-rest-client = { workspace = true }
 essential-types = { workspace = true }
+pint-cli = { workspace = true }
+pint-pkg = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
