--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ essential-wallet = "0.5.0"
 pint-abi = "0.9.0"
 pint-cli = "0.11.0"
 pint-pkg = "0.11.0"
+pint-manifest = "0.3.0"
 hex = "0.4.3"
 reqwest = "0.12.8"
 rpassword = "7.3.1"
