--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,8 @@ essential-signer = "0.4.0"
 essential-types = "0.5.0"
 essential-wallet = "0.5.0"
 pint-abi = "0.9.0"
-pint-cli = { path = "../pint/pint-cli" }
-pint-pkg = { path = "../pint/pint-pkg" }
+pint-cli = "0.11.0"
+pint-pkg = "0.11.0"
 hex = "0.4.3"
 reqwest = "0.12.8"
 rpassword = "7.3.1"
