--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ essential-wallet = "0.5.0"
 pint-abi = "0.9.0"
 pint-cli = "0.11.0"
 pint-pkg = "0.11.0"
+pint-manifest = "0.3.0"
 hex = "0.4.3"
 reqwest = "0.12.8"
 rpassword = "7.3.1"
@@ -49,4 +50,5 @@ uuid = { version = "1.11.0", features = ["v4"] }
 essential-rest-client = { path = "crates/essential-rest-client", version = "0.6.0" }
 essential-app-utils = { path = "apps/utils", version = "0.6.0" }
 pint-deploy = { path = "crates/pint-deploy", version = "0.1.0" }
+pint-query = { path = "crates/pint-query", version = "0.1.0" }
 pint-submit = { path = "crates/pint-submit", version = "0.1.0" }
