--- a/crates/pint-query/Cargo.toml
+++ b/crates/pint-query/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "pint-submit"
-description = "Pint package for submitting solutions to a node"
+name = "pint-query"
+description = "Pint package for querying state from a node"
 version = "0.1.0"
 edition.workspace = true
 authors.workspace = true
@@ -14,5 +14,7 @@ clap = { workspace = true }
 essential-rest-client = { workspace = true }
 essential-types = { workspace = true }
 hex = { workspace = true }
+pint-abi = { workspace = true }
+pint-manifest = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
