chore: split submit into lib and bin targets
<!-- ps-id: a098da2b-f0e8-4569-a6bf-9dc37deb3117 -->

--- a/crates/pint-submit/Cargo.toml
+++ b/crates/pint-submit/Cargo.toml
@@ -8,6 +8,14 @@ homepage.workspace = true
 license.workspace = true
 repository.workspace = true
 
+[[bin]]
+name = "submit"
+path = "src/main.rs"
+
+[lib]
+path = "src/lib.rs"
+
+
 [dependencies]
 anyhow = { workspace = true }
 clap = { workspace = true }
