chore: import pint-submit lib in pint deploy
<!-- ps-id: 22b3beb8-1cdb-433d-ba4b-301cfd1b25d5 -->

--- a/crates/pint-deploy/Cargo.toml
+++ b/crates/pint-deploy/Cargo.toml
@@ -17,5 +17,6 @@ essential-rest-client = { workspace = true }
 essential-types = { workspace = true }
 pint-cli = { workspace = true }
 pint-pkg = { workspace = true }
+pint-submit = { path = "../pint-submit" }
 serde_json = { workspace = true }
 tokio = { workspace = true }
