refactor: clean up types & fn signatures
<!-- ps-id: b1b03d6a-2fc8-4d33-968a-92e1ae0e8dae -->

--- a/crates/pint-submit/Cargo.toml
+++ b/crates/pint-submit/Cargo.toml
@@ -15,11 +15,11 @@ path = "src/main.rs"
 [lib]
 path = "src/lib.rs"
 
-
 [dependencies]
 anyhow = { workspace = true }
 clap = { workspace = true }
 essential-hash = { workspace = true }
+essential-node-types = { workspace = true }
 essential-rest-client = { workspace = true }
 essential-types = { workspace = true }
 hex = { workspace = true }
