chore: update essential app utils manifest
<!-- ps-id: ef5c86a8-0ea9-4913-bbe7-e25b2a4da0c8 -->

--- a/apps/utils/Cargo.toml
+++ b/apps/utils/Cargo.toml
@@ -28,4 +28,4 @@ toml.workspace = true
 uuid.workspace = true
 
 [features]
-test-utils = ["dep:essential-debugger", "dep:essential-rest-client"]
+test-utils = ["dep:essential-rest-client"]
