feat: Ensure programs are deployed alongside their contracts

--- a/apps/counter/app/Cargo.toml
+++ b/apps/counter/app/Cargo.toml
@@ -19,4 +19,5 @@ essential-builder.workspace = true
 essential-builder-db.workspace = true
 essential-node.workspace = true
 regex = "1.11.1"
+tracing.workspace = true
 tracing-subscriber.workspace = true
