--- a/apps/token/app/Cargo.toml
+++ b/apps/token/app/Cargo.toml
@@ -26,4 +26,5 @@ essential-wallet = { workspace = true, features = ["test-utils"] }
 essential-builder = { workspace = true, features = ["tracing"] }
 essential-builder-db.workspace = true
 essential-node = { workspace = true, features = ["tracing"] }
+essential-node-types.workspace = true
 tracing-subscriber.workspace = true
