--- a/apps/counter/app/Cargo.toml
+++ b/apps/counter/app/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "counter-app"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 publish = false
 
@@ -17,6 +17,8 @@ tokio.workspace = true
 essential-app-utils = { workspace = true, features = ["test-utils"] }
 essential-builder.workspace = true
 essential-builder-db.workspace = true
+essential-node-types.workspace = true
 essential-node.workspace = true
 regex = "1.11.1"
+tracing.workspace = true
 tracing-subscriber.workspace = true
