--- a/apps/utils/Cargo.toml
+++ b/apps/utils/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "essential-app-utils"
 description = "Utilities for building Essential applications"
-version = "0.6.0"
+version = "0.7.0"
 edition.workspace = true
 authors.workspace = true
 homepage.workspace = true
@@ -13,7 +13,6 @@ anyhow = { workspace = true }
 clap = { workspace = true }
 essential-builder-db = { workspace = true }
 essential-builder = { workspace = true }
-essential-debugger = { workspace = true, optional = true }
 essential-hash = { workspace = true }
 essential-rest-client = { workspace = true, optional = true }
 essential-sign = { workspace = true }
@@ -28,4 +27,4 @@ toml.workspace = true
 uuid.workspace = true
 
 [features]
-test-utils = ["dep:essential-debugger", "dep:essential-rest-client"]
+test-utils = ["dep:essential-rest-client"]
