--- a/crates/pint-deploy/Cargo.toml
+++ b/crates/pint-deploy/Cargo.toml
@@ -17,6 +17,6 @@ essential-rest-client = { workspace = true }
 essential-types = { workspace = true }
 pint-cli = { workspace = true }
 pint-pkg = { workspace = true }
-pint-submit = { workapace = true }
+pint-submit = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
