--- a/crates/pint-deploy/Cargo.toml
+++ b/crates/pint-deploy/Cargo.toml
@@ -15,6 +15,7 @@ essential-hash = { workspace = true }
 essential-node-types = { workspace = true }
 essential-rest-client = { workspace = true }
 essential-types = { workspace = true }
+futures = "0.3.31"
 pint-cli = { workspace = true }
 pint-pkg = { workspace = true }
 serde_json = { workspace = true }
